# rse

./: .env.example  .gitignore  Cargo.toml  LICENSE  LICENSES  README-git-alt.md  README-js-alt.md  README-npm-alt.md  README.md  biome.json  build.config.ts  build.publish.ts  build.ts  cli-test.ts  components.json  drizzle.config.ts  eslint.config.js  go.mod  knip.json  main.go  manage-libs.ts  package.json  relidler.cfg.ts  reliverse.ts  reltypes.ts  reset.d.ts  schema.json  tsconfig.json  vitest.config.ts
.config/: dler.ts  relinka.ts  rse.old.ts  rse.ts
.cursor/rules/: 001-general-rules.mdc  100-package-manager.mdc  1000-typescript.mdc  1001-markdown.mdc  general-rules.mdc  package-manager.mdc  ts-coding-rules.mdc  use-bun-instead-of-node-vite-npm-pnpm.mdc
.github/: funding.yml
.github/workflows/: build-native-binaries.yml
.reliverse/rules/: general-rules.md
.zed/: settings.json
cli/: package.json
docs/: docs-add.md  docs-ai.md  docs-clone.md  docs-cmod.md  docs-env.md  docs-mrse.md  docs-multireli.md  docs-upload.md
scripts/: package.json
scripts/src/: cli.ts
src/: APITester.tsx  App.tsx  cli.ts  commands.rs  frontend.tsx  index.css  index.tsx  info.ts  main.rs  main.ts  mod.ts  monorepo.rs  types.ts
src-js-alt/: lib.rs  main.rs
src-js-alt/tests/: basic.rs
src-npm/: cli.ts
src-ts/: const.ts  rse-go  rse-rust  rse.ts
src-ts/const/: msg.ts
src-ts/impl/: args.ts  msgs.ts  types.ts  utils.ts
src-ts/menu/: toolbox.ts
src/app/: app-impl.ts  app-mod.ts  app-types.ts  cmds.ts
src/cli/: cli-impl.ts  cli-mod.ts
src/db/: client.ts  (+3 more)
(+780 files in other folders)
