# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rse-rust"
version = "0.1.0"
edition = "2024"
description = "Orchestrates and caches builds for JS monorepos"
authors = ["Reliverse <team@reliverse.dev>"]
license = "Apache-2.0"
repository = "https://github.com/reliverse/dler"
keywords = ["monorepo", "build", "cache", "orchestration"]
categories = ["development-tools", "build-tools"]

[dependencies]
serde_json = "1.0.142"
serde_yaml = "0.9.34"
glob = "0.3.3"
md5 = "0.8.0"
fs_extra = "1.3.0"

# Production build optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Debug build for development
[profile.dev]
opt-level = 0
debug = true
